# que-account

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yaml  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: codeql.yml  lint.yml  testing.yml
api_v1/user/: __init__.py  default.py  endpoints.py  setup.py
core/data/: config.py
docs/: Dockerfile  backend.md  database.md  development.md  home.md
docs/docs/: backend.md  database.md
migrations/: env.py
migrations/versions/: 01a1670187af_initai_create.py  0a0ceda3accb_initial_commit_3.py  0d2113c20ede_inital_commit.py  0d47d309e524_initial_commit.py  1181edaaf68a_update_table_name.py  14c6484eb140_update_table_name.py  235f0892b6da_initial_commit_5.py  3e5d530217b9_update_table_name.py  48c50d02bb83_update_table_name.py  68bafb62fba9_initial_commit_4.py  83f0557c78d6_update_ids_of_tables.py  a200666ee461_drop_tables.py  d38d79e17c5a_initial_commit_2.py  e00a64640df6_update_table_name.py  eabfc328d3e1_initial_commit.py  f446d361ddb4_added_initial_table.py  fad7c3bc7d93_initial_commit.py
prometheus/: prometheus.yml
scripts/alembic/: run_migrations.sh
src/: app.py  main.py
src/app/: __init__.py  config.py  di.py
src/app/middlewares/: __init__.py  logging.py
src/application/: __init__.py  exceptions.py  strategies.py
src/application/dto/: __init__.py  auth.py  auth_dto.py  notification.py  photo.py  profile.py  role.py  role_dto.py  user.py  user_dto.py
src/application/mixins/: __init__.py  auth.py  base.py  role.py  user.py
src/application/persistence/: base.py  interfaces.py  types.py
src/application/queries/: __init__.py  auth.py  profile.py  role.py  user.py
src/application/repositories/: __init__.py  abс_repository.py  auth.py  auth_repository.py  role.py  user.py  user_repository.py
src/application/service/: __init__.py  auth.py  auth_service.py  role.py  user.py  user_service.py
src/application/services/: __init__.py  auth.py  notification.py  photo.py  profile.py  user.py
src/core/: exceptions.py  settings.py
src/domain/auth/: __init__.py  password_hasher.py
src/domain/common/: __init__.py  base_exception.py  base_value_objects.py
src/domain/user/: __init__.py  entity.py  exceptions.py
src/domain/user/entites/: __init__.py  user.py
src/infrastructure/: __init__.py  settings.py
src/infrastructure/database/: __init__.py  db_connection.py  db_helper.py  redis.py
src/infrastructure/database/models/: __init__.py  base.py  interest.py  models.py  photo.py  profile.py  role.py  user.py
src/infrastructure/database/repositories/: __init__.py  auth.py  auth_repository.py  photo.py  role.py  user.py  user_repository.py
src/infrastructure/log/: __init__.py  configuration.py  setup.py
src/infrastructure/models/: __init__.py  base.py
src/infrastructure/services/security/: __init__.py  exception.py  hash.py  hash_service.py  jwt.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py  di_containers.py  exceptions.py
src/presentation/api/controllers/: __init__.py  auth.py  healthcheck.py  photo.py  profile.py  role.py  user.py  users.py
src/presentation/api/dto/: __init__.py  photo.py  profile.py  user.py
src/presentation/api/middlewares/: logging.py
src/presentation/api/providers/: __init__.py  dependencies.py  di_containers.py
src/shared/: __init__.py  exceptions.py  settings.py  types.py
tests/: conftest.py  test_auth.py  test_healthcheck.py
tests/integration/: conftest.py  test_auth.py  test_profile.py  test_role.py  test_user.py
tests/misc/: __init__.py  utils.py
tests/unit/: conftest.py  test_user.py
