[tool.poetry]
name = "que-account"
version = "0.1.0"
description = "Account abstraction service for que"
authors = ["David Dzhalaev <72649244+DavidRomanovizc@users.noreply.github.com>"]
license = "GPL-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
environs = "10.3.0"
fastapi = "0.109.0"
mkdocs-material = "9.5.6"
uvicorn = "0.27.0.post1"
sqlalchemy = "2.0.25"
asyncpg = "0.29.0"
structlog = "24.1.0"
dependency-injector = "4.41.0"
alembic = "1.13.1"
greenlet = "3.0.3"
pre-commit = "3.6.2"
boto3 = "1.34.49"
argon2-cffi = "23.1.0"
types-redis = "4.6.0.20240218"
pycountry = "23.12.11"
stubs = "1.0.0"
redis = "5.0.3"
jose = "1.0.0"
aiosqlite = "0.19.0"
annotated-types = "0.6.0"
anyio = "4.2.0"
argon2-cffi-bindings = "21.2.0"
async-timeout = "4.0.3"
babel = "2.14.0"
black = "23.12.1"
boolean-py = "4.0"
botocore = "1.34.49"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.11.17"
cffi = "1.16.0"
cfgv = "3.4.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
cryptography = "42.0.5"
cyclonedx-python-lib = "6.4.1"
defusedxml = "0.7.1"
deptry = "0.12.0"
distlib = "0.3.8"
dulwich = "0.21.7"
ecdsa = "0.18.0"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
ghp-import = "2.1.0"
h11 = "0.14.0"
html5lib = "1.1"
httpcore = "1.0.2"
httpx = "0.26.0"
identify = "2.5.35"
idna = "3.6"
importlib-metadata = "7.0.1"
iniconfig = "2.0.0"
installer = "0.7.0"
isort = "5.13.2"
jaraco-classes = "3.3.1"
jinja2 = "3.1.3"
jmespath = "1.0.1"
keyring = "24.3.0"
license-expression = "30.2.0"
mako = "1.3.2"
markdown = "3.5.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.4"
marshmallow = "3.20.2"
mdurl = "0.1.2"
mergedeep = "1.3.4"
mkdocs = "1.5.3"
mkdocs-material-extensions = "1.3.1"
more-itertools = "10.2.0"
msgpack = "1.0.7"
mypy = "1.8.0"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
packageurl-python = "0.13.4"
packaging = "23.2"
paginate = "0.5.6"
pathspec = "0.12.1"
pexpect = "4.9.0"
pip-api = "0.0.30"
pip-requirements-parser = "32.0.1"
pip-audit = "2.7.0"
pkginfo = "1.9.6"
pluggy = "1.4.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
py-serializable = "1.0.0"
pyasn1 = "0.5.1"
pycparser = "2.21"
pycrypto = "2.6.1"
pydantic = "2.6.0"
pydantic-core = "2.16.1"
pygments = "2.17.2"
pymdown-extensions = "10.7"
pyparsing = "3.1.1"
pyproject-hooks = "1.0.0"
pytest = "7.4.4"
pytest-asyncio = "0.23.4"
python-dateutil = "2.8.2"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
pyyaml = "6.0.1"
pyyaml-env-tag = "0.1"
rapidfuzz = "3.6.1"
regex = "2023.12.25"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rich = "13.7.0"
rsa = "4.9"
ruff = "0.1.15"
s3transfer = "0.10.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
starlette = "0.35.1"
toml = "0.10.2"
tomlkit = "0.12.3"
trove-classifiers = "2024.1.31"
types-pyopenssl = "24.0.0.20240228"
typing-extensions = "4.9.0"
urllib3 = "2.0.7"
virtualenv = "20.25.1"
watchdog = "3.0.0"
webencodings = "0.5.1"
xattr = "0.10.1"
zipp = "3.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"
deptry = "^0.12.0"
ruff = "^0.1.14"
pip-audit = "^2.7.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"
aiosqlite = "^0.19.0"

[tool.black]
line-length = 99
exclude = "venv"
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true

[tool.isort]
profile = "black"
force_grid_wrap = 1
multi_line_output = 3
honor_noqa = true
float_to_top = true
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true
line_length = 99
use_parentheses = true
known_third_party = ["asyncpg", "fastapi", "pytest", "sqlalchemy"]
skip = ["__init__.py", "migrations"]

[tool.ruff]
line-length = 99

[tool.pytest.ini_options]
pythonpath = [
    ".", "api_v1",
]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,docs,tools,migrations}/*" = ["F401"]

[tool.deptry]
ignore = ["DEP002"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
